name:                rungekutta
version:             0.1.0.0
synopsis:            Runge-Kutta
description:         Please see README.md
homepage:            http://github.com/jim-holmstroem/rungekutta
license:             BSD3
license-file:        LICENSE
author:              Jim Holmstrom
maintainer:          jim.holmstroem@gmail.com
copyright:           2015 Jim Holmstrom
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable rungekutta
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -threaded
  build-depends:       base >= 4.7 && < 5, vector >=0.10 && <0.11, deepseq >=1.4 && <1.5, distributive >=0.4 && <0.5, bytestring, binary, mwc-random, erf, transformers
